# AdiFram_CPP

./: CMakeLists.txt  Changelog.txt  Makefile  README.md  buildTestSuite.sh  cleanBuildArtifacts.sh
adifram_cpp/: CMakeLists.txt  Makefile
adifram_cpp/sorting/src/: CMakeLists.txt  Makefile  cmake_install.cmake
app/src/: CMakeLists.txt  Main.cpp  Makefile  cmake_install.cmake
design/: desiredFeatureList.txt
sorting/: supportedSortingAlgorithms.txt
xml/: CMakeLists.txt
xml/pugixml-1.10/src/: CMakeLists.txt
